@@ -183,98 +183,6 @@ namespace RCWA{
     const int N,
     const POLARIZATION polar
   );
-  /*============================================================
-  * Function computing the E and H fields at given (kx, ky) and positions
-  @arg:
-   omega: the angular frequency (normalized to c)
-   thicknessList: the thickness for each layer
-   kx: the k vector at x direction (normalized value)
-   ky: the y vector at x direction (normalized value)
-   EMatrices:  the E matrices for all layers
-   grandImaginaryMatrices: collection of all imaginary matrices in all layers
-   eps_zz_inv: the inverse of eps_zz
-   Gx_mat: the Gx matrix
-   Gy_mat: the Gy matrix
-   N: total number of G
-   positions: the real space positions
-   numOfPoints: the number of positions
-   fields: the output fields
-  ==============================================================*/
-  void ehFields(
-    const double omega,
-    const RCWAVector& thicknessList,
-    double kx,
-    double ky,
-    const RCWAMatrices& EMatrices,
-    const RCWAMatrices& eps_zz_inv,
-    const RCWAMatrix& Gx_mat,
-    const RCWAMatrix& Gy_mat,
-    const int N,
-    const double** positions,
-    const double numOfPoints,
-    const double** fields
-  );
-  /*============================================================
-  * Function computing the E fields at given (kx, ky) and positions
-  @arg:
-   omega: the angular frequency (normalized to c)
-   thicknessList: the thickness for each layer
-   kx: the k vector at x direction (normalized value)
-   ky: the y vector at x direction (normalized value)
-   EMatrices:  the E matrices for all layers
-   grandImaginaryMatrices: collection of all imaginary matrices in all layers
-   eps_zz_inv: the inverse of eps_zz
-   Gx_mat: the Gx matrix
-   Gy_mat: the Gy matrix
-   N: total number of G
-   positions: the real space positions
-   numOfPoints: the number of positions
-   fields: the output fields
-  ==============================================================*/
-  void eFields(
-    const double omega,
-    const RCWAVector& thicknessList,
-    double kx,
-    double ky,
-    const RCWAMatrices& EMatrices,
-    const RCWAMatrices& eps_zz_inv,
-    const RCWAMatrix& Gx_mat,
-    const RCWAMatrix& Gy_mat,
-    const int N,
-    const double** positions,
-    const double numOfPoints,
-    const double** fields
-  );
-  /*============================================================
-  * Function computing the H fields at given (kx, ky) and positions
-  @arg:
-   omega: the angular frequency (normalized to c)
-   thicknessList: the thickness for each layer
-   kx: the k vector at x direction (normalized value)
-   ky: the y vector at x direction (normalized value)
-   EMatrices:  the E matrices for all layers
-   grandImaginaryMatrices: collection of all imaginary matrices in all layers
-   eps_zz_inv: the inverse of eps_zz
-   Gx_mat: the Gx matrix
-   Gy_mat: the Gy matrix
-   N: total number of G
-   positions: the real space positions
-   numOfPoints: the number of positions
-   fields: the output fields
-  ==============================================================*/
-  void hFields(
-    const double omega,
-    const RCWAVector& thicknessList,
-    double kx,
-    double ky,
-    const RCWAMatrices& EMatrices,
-    const RCWAMatrices& eps_zz_inv,
-    const RCWAMatrix& Gx_mat,
-    const RCWAMatrix& Gy_mat,
-    const int N,
-    const double** positions,
-    const double numOfPoints,
-    const double** fields
-  );
+  
 }
 #endif
